make basic try to collect cpu stat in server docker

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
       - all
     volumes:
       - ".:/usr/src/app"
+      - /sys/fs/cgroup:/log/sys/fs/cgroup
     networks:
       - default
     command: "tail -f /dev/null"
