--- a/fluentd/Dockerfile.collector
+++ b/fluentd/Dockerfile.collector
@@ -1,7 +1,12 @@
-FROM "fluent/fluentd:latest"
+# FROM "fluent/fluentd:latest"
+FROM "fluent/fluentd:edge-debian-arm64"
 
-RUN apk --no-cache --update add build-base ruby-dev postgresql-dev
+User root
+RUN apk --no-cache --update add build-base ruby-dev postgresql-dev; echo ok
+RUN apt-get update && apt-get install -y libpq-dev build-essential; echo ok
 
 RUN fluent-gem install fluent-plugin-sql --no-document
 RUN fluent-gem install pg --no-document
 RUN fluent-gem install fluent-plugin-record-modifier --no-document
+
+WORKDIR /usr/src/app
