update dockerfile, log cpu, log mem, log container name, split config to modules

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,11 +9,12 @@ services:
       - collector
       - all
     volumes:
-      - ".:/usr/src/app"
-      - /sys/fs/cgroup:/log/sys/fs/cgroup
+      - ./fluentd:/usr/src/app
+      - /sys/fs/cgroup:/log/resources
+      - /var/lib/docker/containers/:/log/containers
     networks:
       - default
-    command: "tail -f /dev/null"
+    command: fluentd -c config.conf
   db:
     build:
       context: ./postgres
