--- a/fluentd/config.conf
+++ b/fluentd/config.conf
@@ -17,3 +17,6 @@
 #@include config/match_stdout.conf
 @include config/match_resource_psql.conf
 @include config/match_name_psql.conf
+
+### Other Service Config ###
+@include /config/web-history/fluentd.conf
