--- a/fluentd/config.conf
+++ b/fluentd/config.conf
@@ -8,8 +8,8 @@
     remove_keys filename
 
     <record>
-        container_id ${record["filename"].scan(%r{^/.*/cgroup/.*?/docker/(.*?)/.*$}).dig(0, 0)}
-        resource_type ${record["filename"].scan(%r{^/.*/cgroup/(.*?)/docker/.*$}).dig(0, 0)}
+        container_id ${record["filename"].scan(%r{^/.*/resources/.*?/docker/(.*?)/.*$}).dig(0, 0)}
+        resource_type ${record["filename"].scan(%r{^/.*/resources/(.*?)/docker/.*$}).dig(0, 0)}
     </record>
 </filter>
 @include config/filter_name.conf
