--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,11 @@ services:
     build:
       context: ./fluentd
       dockerfile: Dockerfile.collector
+    deploy:
+      resources:
+        limits:
+          memory: '150M'
+
     profiles:
       - collector
       - all
@@ -16,12 +21,21 @@ services:
       - ../WebHistory/bin/logs/:/log/web-history/
     networks:
       - default
+    environment:
+      - RUBY_GC_HEAP_OLDOBJECT_LIMIT_FACTOR=1.2
+
     command: fluentd -c config.conf
     # command: tail -f /dev/null
   db:
     build:
       context: ./postgres
       dockerfile: Dockerfile.db
+    deploy:
+      resources:
+        limits:
+          memory: '100M'
+      restart_policy:
+        condition: on-failure
     profiles:
       - db
       - all
@@ -35,6 +49,11 @@ services:
     build:
       context: ./grafana
       dockerfile: Dockerfile.visualize
+    deploy:
+      resources:
+        limits:
+          memory: '75M'
+
     profiles:
       - visualize
       - all
