--- a/fluentd/config/source_name.conf
+++ b/fluentd/config/source_name.conf
@@ -1,6 +1,7 @@
 <source>
   @type tail
   path /log/containers/*/config.v2.json
+  pos_file ./pos
   tag docker.container.name
   read_from_head true
 
