fix sourcing cpu and mem

--- a/fluentd/config/source_mem.conf
+++ b/fluentd/config/source_mem.conf
@@ -6,7 +6,7 @@
 
     <parse>
         @type regexp
-        expression ^(?<filename>.*?) (?<resource_type>.*?) (?<data>.*?)$
+        expression ^(?<container_id>.*?) (?<resource_type>.*?) (?<data>.*?)$
     </parse>
 </source>
 
