feat: add jaeger-all-in-one as monitor

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -77,6 +77,20 @@ services:
       - ./grafana/data:/grafana_dest
     profiles:
       - backup
+  jaeger:
+    image: jaegertracing/all-in-one:latest
+    deploy:
+      resources:
+        limits:
+          memory: '50M'
+    hostname: monitoring
+    ports:
+      - 3000:16686
+      - 14268:14268
+    networks:
+      - trace
+    profiles:
+      - jaeger
 
 volumes:
   postgres_data:
@@ -87,3 +101,6 @@ networks:
     driver: bridge
     name: router
   default:
+  trace:
+    driver: bridge
+    name: trace
