--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -91,6 +91,21 @@ services:
       - trace
     profiles:
       - jaeger
+  cadvisor:
+    image: gcr.io/cadvisor/cadvisor:latest
+    privileged: true
+    ports:
+      - 8080:8080
+    volumes:
+      - /:/roofs:ro
+      - /var/run:/var/run:ro
+      - /sys:/sys:ro
+      - /var/lib/docker/:/var/lib/docker:ro
+      - /dev/disk/:/dev/disk:ro
+    devices:
+      - /dev/kmsg
+    profiles:
+      - cadvisor
 
 volumes:
   postgres_data:
