--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -104,8 +104,21 @@ services:
       - /dev/disk/:/dev/disk:ro
     devices:
       - /dev/kmsg
+    networks:
+      - trace
+    hostname: cadvisor
     profiles:
       - cadvisor
+  prometheus:
+    image: prom/prometheus
+    ports:
+      - 9090:9090
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml:ro
+    networks:
+      - trace
+    profiles:
+      - prometheus
 
 volumes:
   postgres_data:
