--- a/prometheus.yml
+++ b/prometheus.yml
@@ -1,6 +1,6 @@
 scrape_configs:
 - job_name: cadvisor
-  scrape_interval: 60s
+  scrape_interval: 20s
   static_configs:
   - targets:
     - cadvisor:8080
@@ -28,12 +28,12 @@ scrape_configs:
       source_labels: [service]
       regex: (.+)
 - job_name: device_temperature
-  scrape_interval: 60s
+  scrape_interval: 20s
   static_configs:
   - targets:
     - temperature-collector:8000
 - job_name: container_resource
-  scrape_interval: 60s
-  static_config:
+  scrape_interval: 20s
+  static_configs:
   - targets:
     - container-resource-collector:8000 
