chore: update gitignore and docker compose after restructure

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.9"
 services:
   grafana:
     build:
-      context: ./grafana
+      context: ./frontend/grafana
       dockerfile: Dockerfile.visualize
     deploy:
       resources:
@@ -11,7 +11,7 @@ services:
           memory: '150M'
     hostname: monitoring_grafana
     profiles:
-      - UI
+      - frontend
       - all
     networks:
       - router
@@ -20,8 +20,8 @@ services:
     ports:
       - 3001:3000
     volumes:
-      - ./grafana/provisioning:/etc/grafana/provisioning
-      - ./grafana/dashboards:/etc/dashboards
+      - ./frontend/grafana/provisioning:/etc/grafana/provisioning
+      - ./frontend/grafana/dashboards:/etc/dashboards
       - grafana_data:/var/lib/grafana
   backup:
     image: alpine:latest
@@ -31,7 +31,7 @@ services:
           memory: '10M'
     volumes:
       - grafana_data:/grafana_source
-      - ./grafana-backup:/grafana_dest
+      - ./backup/grafana-dashboard:/grafana_dest
     profiles:
       - backup
   jaeger:
@@ -47,7 +47,7 @@ services:
       - BADGER_DIRECTORY_VALUE=/badger/data
       - BADGER_DIRECTORY_KEY=/badger/key
     volumes:
-      - ./jaeger/badger:/badger
+      - ./ingesters/jaeger/badger:/badger
     ports:
       - 8000:16686
         #- 14268:14268
@@ -64,7 +64,7 @@ services:
         limits:
           memory: '250M'
     volumes:
-      - ./prometheus.yml:/etc/prometheus/prometheus.yml:ro
+      - ./ingesters/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml:ro
     ports:
       - 9090:9090
     networks:
@@ -75,7 +75,7 @@ services:
       - all
   temperature-collector:
     build:
-      context: ./go-temperature-collector
+      context: ./collectors/go-temperature-collector
     deploy:
       resources:
         limits:
@@ -88,7 +88,7 @@ services:
       - trace
   container-resource-collector:
     build:
-      context: ./container-resource-collector
+      context: ./collectors/container-resource-collector
     deploy:
       resources:
         limits:
@@ -109,7 +109,7 @@ services:
     # command: -config.gile=/etc/loki/local-config.yaml
     volumes:
       # - ./loki/loki-config.yaml:/etc/loki/local-config.yaml
-      - ./loki/storage:/loki
+      - ./ingesters/loki/storage:/loki
     profiles:
       - logs
       - ingester
@@ -121,7 +121,7 @@ services:
     networks:
       - trace
     volumes:
-      - ./fluent-bit:/fluent-bit/etc/
+      - ./collectors/fluent-bit:/fluent-bit/etc/
     profiles:
       - logs
       - collector
