chore: update logs collectors format and label

--- a/collectors/fluent-bit/parsers.conf
+++ b/collectors/fluent-bit/parsers.conf
@@ -2,5 +2,5 @@
     name json-parser
     format json
     time_key time
-    time_format %Y-%m-%dT%H:%M:%S%z
+    time_format %Y-%m-%dT%H:%M:%S.%L%z
     time_keep on
