--- a/collectors/fluent-bit/fluent-bit.conf
+++ b/collectors/fluent-bit/fluent-bit.conf
@@ -1,3 +1,8 @@
+[SERVICE]
+    Flush     1
+    Daemon    off
+    Log_Level trace
+
 [INPUT]
     name    tail
     path    /logs/web-history/batch.log
@@ -18,7 +23,7 @@
 
 [OUTPUT]
     name                    loki
-    match                   webhistory.batch
+    match                   web-history.batch
     host                    monitoring_loki
     port                    3100
     labels                  service=web-history,source=batch
@@ -27,7 +32,7 @@
 
 [OUTPUT]
     name                    loki
-    match                   webhistory.backend
+    match                   web-history.backend
     host                    monitoring_loki
     port                    3100
     labels                  service=web-history,source=backend
@@ -36,7 +41,7 @@
 
 [OUTPUT]
     name                    loki
-    match                   book-spider
+    match                   book-spider.batch
     host                    monitoring_loki
     port                    3100
     labels                  service=book-spider,source=batch
