--- a/deploy/grafana/pv.yaml
+++ b/deploy/grafana/pv.yaml
@@ -2,10 +2,10 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: monitoring-grafana-data-volume
+  name: monitoring.grafana.data-volume
   labels:
     label: local
-    app: monitoring-grafana
+    app: grafana
     project: monitoring
 spec:
   storageClassName: manual
@@ -20,10 +20,10 @@ spec:
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: monitoring-grafana-dashboard-volume
+  name: monitoring.grafana.dashboard-volume
   labels:
     label: local
-    app: monitoring-grafana
+    app: grafana
     project: monitoring
 spec:
   storageClassName: manual
@@ -38,10 +38,10 @@ spec:
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: monitoring-grafana-provisioning-volume
+  name: monitoring.grafana.provisioning-volume
   labels:
     label: local
-    app: monitoring-grafana
+    app: grafana
     project: monitoring
 spec:
   storageClassName: manual
