--- a/deploy/prometheus/pvc.yaml
+++ b/deploy/prometheus/pvc.yaml
@@ -3,7 +3,7 @@ kind: PersistentVolumeClaim # Create PVC
 metadata:
   name: monitoring-prometheus-data-claim # Sets name of PV
   labels:
-    app: monitoring-prometheus
+    app: prometheus
     project: monitoring
 spec:
   storageClassName: manual
@@ -12,4 +12,4 @@ spec:
   resources:
     requests:
       storage: 1Mi # Sets volume size
-  volumeName: monitoring-prometheus-volume
+  volumeName: monitoring.prometheus.volume
