--- a/deploy/prometheus/deployment.yaml
+++ b/deploy/prometheus/deployment.yaml
@@ -1,19 +1,20 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: monitoring-prometheus  # Sets Deployment name
+  name: monitoring.prometheus  # Sets Deployment name
   labels:
-    app: monitoring-prometheus
+    app: prometheus
     project: monitoring
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: monitoring-prometheus
+      app: prometheus
+      project: monitoring
   template:
     metadata:
       labels:
-        app: monitoring-prometheus
+        app: prometheus
         project: monitoring
     spec:
       containers:
@@ -25,7 +26,7 @@ spec:
               memory: 260M
           ports:
             - containerPort: 9090  # Exposes container port
-              hostPort: 9091
+              hostPort: 9090
           volumeMounts:
             - mountPath: /etc/prometheus/prometheus.yml
               name: monitoring-prometheus-volume
@@ -35,8 +36,8 @@ spec:
       volumes:
         - name: monitoring-prometheus-volume
           persistentVolumeClaim:
-            claimName: monitoring-prometheus-data-claim
+            claimName: monitoring.prometheus.data-claim
         - name: api-token
           secret:
-            secretName: prometheus-api-user-secret
+            secretName: monitoring.prometheus.api-user-secret
       restartPolicy: Always
