--- a/deploy/prometheus/pv.yaml
+++ b/deploy/prometheus/pv.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: monitoring-prometheus-volume
+  name: monitoring.prometheus.volume
   labels:
     label: local
-    app: monitoring-prometheus
+    app: prometheus
     project: monitoring
 spec:
   storageClassName: manual
