--- a/deploy/prometheus/role/api-token.yaml
+++ b/deploy/prometheus/role/api-token.yaml
@@ -1,7 +1,10 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: prometheus-api-user-secret
+  name: monitoring.prometheus.api-user-secret
+  labels:
+    app: prometheus
+    project: monitoring
   annotations:
-    kubernetes.io/service-account.name: prometheus-api-user
+    kubernetes.io/service-account.name: monitoring.prometheus.api-user
 type: kubernetes.io/service-account-token
