--- a/deploy/prometheus/role/service-account.yaml
+++ b/deploy/prometheus/role/service-account.yaml
@@ -1,4 +1,7 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: prometheus-api-user
+  name: monitoring.prometheus.api-user
+  labels:
+    app: prometheus
+    project: monitoring
