--- a/deploy/prometheus/service.yaml
+++ b/deploy/prometheus/service.yaml
@@ -3,7 +3,7 @@ kind: Service
 metadata:
   name: monitoring-prometheus-service # Sets service name
   labels:
-    app: monitoring-prometheus
+    app: prometheus
     project: monitoring
 spec:
   ports:
@@ -11,4 +11,5 @@ spec:
       port: 9090 # Sets port to run the postgres application
       targetPort: 9090
   selector:
-    app: monitoring-prometheus
+    app: prometheus
+    project: monitoring
