--- a/deploy/temperature-collector/deploymeny.yaml
+++ b/deploy/temperature-collector/deploymeny.yaml
@@ -10,6 +10,7 @@ spec:
   selector:
     matchLabels:
       app: temperature-collector
+      project: monitoring
   template:
     metadata:
       labels:
@@ -18,7 +19,7 @@ spec:
     spec:
       terminationGracePeriodSeconds: 30
       containers:
-        - name: monitoring-grafana
+        - name: temperature-collector
           image: monitoring-temperature-collector:latest # Sets Image
           imagePullPolicy: "Never"
           resources:
