--- a/deploy/grafana/pvc.yaml
+++ b/deploy/grafana/pvc.yaml
@@ -12,7 +12,7 @@ spec:
     - ReadWriteOnce # Sets read and write access
   resources:
     requests:
-      storage: 10Mi # Sets volume size
+      storage: 1Gi # Sets volume size
   volumeName: monitoring.grafana.data-volume
 ---
 # dashboard
@@ -48,3 +48,20 @@ spec:
     requests:
       storage: 10Mi # Sets volume size
   volumeName: monitoring.grafana.provisioning-volume
+---
+# ini
+apiVersion: v1
+kind: PersistentVolumeClaim # Create PVC
+metadata:
+  name: monitoring.grafana.ini-claim # Sets name of PV
+  labels:
+    app: grafana
+    project: monitoring
+spec:
+  storageClassName: manual
+  accessModes:
+    - ReadWriteOnce # Sets read and write access
+  resources:
+    requests:
+      storage: 1Mi # Sets volume size
+  volumeName: monitoring.grafana.ini-volume
