--- a/deploy/alert-manager/pv.yaml
+++ b/deploy/alert-manager/pv.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: monitoring.prometheus.config-volume
+  name: monitoring.alert-manager.config-volume
   labels:
     label: local
-    app: prometheus
+    app: alert-manager
     project: monitoring
 spec:
   storageClassName: manual
@@ -13,15 +13,15 @@ spec:
   accessModes:
     - ReadOnlyMany
   hostPath:
-    path: /volumes/monitoring-prometheus-data/prometheus.yml
+    path: /volumes/monitoring-alert-manager-data/alertmanager.yml
 ---
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: monitoring.prometheus.data-volume
+  name: monitoring.alert-manager.data-volume
   labels:
     label: local
-    app: prometheus
+    app: alert-manager
     project: monitoring
 spec:
   storageClassName: manual
@@ -30,22 +30,22 @@ spec:
   accessModes:
     - ReadOnlyMany
   hostPath:
-    path: /volumes/monitoring-prometheus-data/data
+    path: /volumes/monitoring-alert-manager-data/data
 ---
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: monitoring.prometheus.rule-volume
+  name: monitoring.alert-manager.telegram-bot-token-volume
   labels:
     label: local
-    app: prometheus
+    app: alert-manager
     project: monitoring
 spec:
   storageClassName: manual
   capacity:
-    storage: 100Mi
+    storage: 1Mi
   accessModes:
     - ReadOnlyMany
   hostPath:
-    path: /volumes/monitoring-prometheus-data/rules
+    path: /volumes/monitoring-alert-manager-data/bot_token
 
