--- a/deploy/alert-manager/pvc.yaml
+++ b/deploy/alert-manager/pvc.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: PersistentVolumeClaim # Create PVC
 metadata:
-  name: monitoring.prometheus.config-claim # Sets name of PV
+  name: monitoring.alert-manager.config-claim # Sets name of PV
   labels:
-    app: prometheus
+    app: alert-manager
     project: monitoring
 spec:
   storageClassName: manual
@@ -12,14 +12,30 @@ spec:
   resources:
     requests:
       storage: 1Mi # Sets volume size
-  volumeName: monitoring.prometheus.config-volume
+  volumeName: monitoring.alert-manager.config-volume
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim # Create PVC
 metadata:
-  name: monitoring.prometheus.data-claim # Sets name of PV
+  name: monitoring.alert-manager.data-claim # Sets name of PV
   labels:
-    app: prometheus
+    app: alert-manager
+    project: monitoring
+spec:
+  storageClassName: manual
+  accessModes:
+    - ReadOnlyMany # Sets read and write access
+  resources:
+    requests:
+      storage: 10Gi # Sets volume size
+  volumeName: monitoring.alert-manager.data-volume
+---
+apiVersion: v1
+kind: PersistentVolumeClaim # Create PVC
+metadata:
+  name: monitoring.alert-manager.telegram-bot-token-claim # Sets name of PV
+  labels:
+    app: alert-manager
     project: monitoring
 spec:
   storageClassName: manual
@@ -28,21 +44,5 @@ spec:
   resources:
     requests:
       storage: 1Mi # Sets volume size
-  volumeName: monitoring.prometheus.data-volume
----
-apiVersion: v1
-kind: PersistentVolumeClaim # Create PVC
-metadata:
-  name: monitoring.prometheus.rule-claim # Sets name of PV
-  labels:
-    app: prometheus
-    project: monitoring
-spec:
-  storageClassName: manual
-  accessModes:
-    - ReadOnlyMany # Sets read and write access
-  resources:
-    requests:
-      storage: 100Mi # Sets volume size
-  volumeName: monitoring.prometheus.rule-volume
+  volumeName: monitoring.alert-manager.telegram-bot-token-volume
 
