--- a/deploy/jaeger/service.yaml
+++ b/deploy/jaeger/service.yaml
@@ -10,6 +10,11 @@ spec:
     - protocol: TCP
       port: 16686 # Sets port to run the postgres application
       targetPort: 16686
+      name: jaeger-16686
+    - protocol: TCP
+      port: 14268
+      targetPort: 14268
+      name: jaeger-14268
   selector:
     app: jaeger
     project: monitoring
