--- a/deploy/loki/service.yaml
+++ b/deploy/loki/service.yaml
@@ -8,8 +8,9 @@ metadata:
 spec:
   ports:
     - protocol: TCP
-      port: 3000 # Sets port to run the postgres application
-      targetPort: 3000
+      port: 3100 # Sets port to run the postgres application
+      targetPort: 3100
+      name: loki-3100
   selector:
     app: loki
     project: monitoring
