--- a/deploy/prometheus/deployment.yaml
+++ b/deploy/prometheus/deployment.yaml
@@ -24,19 +24,32 @@ spec:
           resources:
             limits:
               memory: 260M
-          ports:
-            - containerPort: 9090  # Exposes container port
-              hostPort: 9090
+            requests:
+              memory: 70M
+          args:
+            - "--config.file=/etc/prometheus/prometheus.yml"
+            - "--storage.tsdb.path=/prometheus/"
+            - '--web.external-url=http://prometheus.raspi.home/'
           volumeMounts:
             - mountPath: /etc/prometheus/prometheus.yml
               name: monitoring-prometheus-volume
+            - mountPath: /prometheus
+              name: monitoring-prometheus-data
+            - mountPath: /prometheus-rules
+              name: monitoring-prometheus-rule
             - mountPath: /api-token
               name: api-token
               readOnly: true
       volumes:
         - name: monitoring-prometheus-volume
           persistentVolumeClaim:
+            claimName: monitoring.prometheus.config-claim
+        - name: monitoring-prometheus-data
+          persistentVolumeClaim:
             claimName: monitoring.prometheus.data-claim
+        - name: monitoring-prometheus-rule
+          persistentVolumeClaim:
+            claimName: monitoring.prometheus.rule-claim
         - name: api-token
           secret:
             secretName: monitoring.prometheus.api-user-secret
