--- a/deploy/prometheus/service.yaml
+++ b/deploy/prometheus/service.yaml
@@ -10,6 +10,7 @@ spec:
     - protocol: TCP
       port: 9090 # Sets port to run the postgres application
       targetPort: 9090
+      name: prometheus-9090
   selector:
     app: prometheus
     project: monitoring
