feat add pv and pvc for fluent-bit

--- a/deploy/fluent-bit/kustomization.yml
+++ b/deploy/fluent-bit/kustomization.yml
@@ -8,6 +8,8 @@ metadata:
     project: monitoring
 resources:
   - ./base/deployment.yml
+  - ./base/pv.yml
+  - ./base/pvc.yml
 configMapGenerator:
   - name: monitoring.fluent-bit.config-map
     files:
