chore: update fluent bit config

--- a/deploy/fluent-bit/base/deployment.yml
+++ b/deploy/fluent-bit/base/deployment.yml
@@ -35,9 +35,9 @@ spec:
             - -c
             - /fluent-bit/etc/fluent-bit.conf
           volumeMounts:
-            - mountPath: /logs
+            - mountPath: /var/log
               name: monitoring-fluent-bit-logs-volume
-            - mountPath: /fluent-bit/etc/fluent-bit-conf
+            - mountPath: /fluent-bit/etc
               name: monitoring-fluent-bit-config-volume
       volumes:
         - name: monitoring-fluent-bit-logs-volume
