--- a/deploy/fluent-bit/patch/fluent-bit.conf
+++ b/deploy/fluent-bit/patch/fluent-bit.conf
@@ -1,12 +1,18 @@
+[SERVICE]
+    Flush     1
+    Daemon    off
+    Log_Level trace
+
+
 [INPUT]
     name    tail
-    path    /logs/book-spider.api*.log
+    path    /var/log/containers/book-spider.api*.log
     parser  json-parser
     tag     book-spider.api
 
 [OUTPUT]
     name                    loki
-    match                   book-spider
+    match                   book-spider.api
     host                    monitoring-loki-service
     port                    3100
     labels                  service=book-spider,source=api
