fix: fluentbit config for k8s logs

--- a/deploy/fluent-bit/patch/fluent-bit.conf
+++ b/deploy/fluent-bit/patch/fluent-bit.conf
@@ -7,8 +7,20 @@
 [INPUT]
     name    tail
     path    /var/log/containers/book-spider.api*.log
-    parser  json-parser
     tag     book-spider.api
+
+[FILTER]
+    name      parser
+    match     book-spider.*
+    parser    k8s-log-parser
+    key_name  log
+
+
+[FILTER]
+    name      parser
+    match     book-spider.*
+    parser    json-parser
+    key_name  log
 
 [OUTPUT]
     name                    loki
