--- a/deploy/fluent-bit/patch/parsers.conf
+++ b/deploy/fluent-bit/patch/parsers.conf
@@ -4,3 +4,8 @@
     time_key time
     time_format %Y-%m-%dT%H:%M:%S%z
     time_keep on
+
+[PARSER]
+    name k8s-log-parser
+    format regex
+    regex ^([^ ]+) (stdout|stderr) ([^ ]*) (?<log>.*)$
