--- a/deploy/prometheus/patch/deployment.yml
+++ b/deploy/prometheus/patch/deployment.yml
@@ -1,3 +1,6 @@
 - op: replace #action 
   path: /spec/template/spec/containers/0/image
   value: prom/prometheus:v2.40.6
+- op: replace #action
+  path: /spec/template/spec/containers/0/args/3
+  value: '--storage.tsdb.retention.time=29d'
