fix: alertmanager ingress name

--- a/deploy/alert-manager/base/ingress.yml
+++ b/deploy/alert-manager/base/ingress.yml
@@ -1,6 +1,6 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: monitoring.alert-manager.ingress
+  name: monitoring-alert-manager-ingress
 spec:
   rules: []
